[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/nodes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/nodes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/nodes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -3, 0, 0, 0, 0, 637, -4, 0, 0, 0, 0, 633, 900, 0, 0, 0, 0, -6, 897, 0, 0, 0, 0, -1, -3 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Enemy = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.439216, 0.294118, 0.494118, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 318, 530 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 315, 538 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="EnemySpawn" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathEnemyFollow" type="PathFollow2D" parent="EnemySpawn"]
position = Vector2( -1, -3 )
rotation = -0.00156747

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Sounds" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true

[node name="Die" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -5.0

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="spawn_enemy"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
